--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #数据驱动可配也可以不配，因为系统会自动识别
 #spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://118.31.32.168:3306/test3?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://118.31.32.168:3306/test?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username =root
 spring.datasource.password =123456
 
